--- a/src/views/error.pug
+++ b/src/views/error.pug
@@ -1,6 +1,13 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  h1= error.status
+  h2= message
+  include partials/side-nav
+  
+  br
+  br
+  
+  small
+    small
+      pre #{error.stack}
