--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1= 'Library Manager'
+  p Welcome to Library Manager
+
+  include partials/side-nav
+  
