--- a/src/views/loans.pug
+++ b/src/views/loans.pug
@@ -3,14 +3,14 @@ extends layout
 block content
   h1= pageTitle
   p
-    a.button(href='/loans/new')= 'Create New Loan'
+    a.button(href= '/loans/new')= 'Create New Loan'
 
   p= 'Filters '
-    a(href='/loans')= 'All'
+    a(href= '/loans')= 'All'
     |  | 
-    a(href='/loans/overdue')= 'Overdue'
+    a(href= '/loans/overdue')= 'Overdue'
     |  | 
-    a(href='/loans/checked')= 'Checked Out'
+    a(href= '/loans/checked')= 'Checked Out'
 
   table
     thead
@@ -19,39 +19,19 @@ block content
         th= 'Patron'
         th= 'Loaned on'
         th= 'Return by'
+        th= 'Returned on'
         th= 'Action'
 
     tbody
-      tr
-        td
-          a(href='')= 'Emma'
-        td
-          a(href='')= 'Dave McFarland'
-        td= '2015-12-10'
-        td= '2015-12-10'
-        td
-        td
-          a.button(href='')= 'Return book'
-        
-      tr
-        td
-          a(href='')= 'Emma'
-        td
-          a(href='')= 'Dave McFarland'
-        td= '2015-12-10'
-        td= '2015-12-10'
-        td
-        td
-          a.button(href='')= 'Return book'
-          
-      tr
-        td
-          a(href='')= 'Emma'
-        td
-          a(href='')= 'Dave McFarland'
-        td= '2015-12-10'
-        td= '2015-12-10'
-        td
-        td
-          a.button(href='')= 'Return book'
+      each loan in loans
+        tr
+          td
+            a(href= '/book/' + loan.Book.id)= loan.Book.title
+          td
+            a(href= '/patron/' + loan.Patron.id)= loan.Patron.name
+          td= loan.loaned_on
+          td= loan.return_by
+          td= loan.returned_on
+          td
+            a.button(href= '/loan/' + loan.id)= 'Return book'
         
