--- a/src/views/patrons.pug
+++ b/src/views/patrons.pug
@@ -15,19 +15,12 @@ block content
         th= 'Zip'
 
     tbody
-      tr
-        td
-          a(href='')= 'Andrew Chalkley'
-        td= '1234 NE 20st St'
-        td= 'andrew.chalkley@teamtreehouse.com'
-        td= 'MCL1001'
-        td= '90210'
-
-      tr
-        td
-          a(href='')= 'Andrew Chalkley'
-        td= '1234 NE 20st St'
-        td= 'andrew.chalkley@teamtreehouse.com'
-        td= 'MCL1001'
-        td= '90210'
+      each patron in patrons
+        tr
+          td
+            a(href='/patrons/edit/' + patron.id)= patron.name
+          td= patron.address
+          td= patron.email
+          td= patron.library_id
+          td= patron.zip_code
 
