--- a/src/views/loans.pug
+++ b/src/views/loans.pug
@@ -26,12 +26,12 @@ block content
       each loan in loans
         tr
           td
-            a(href= '/book/' + loan.Book.id)= loan.Book.title
+            a(href= '/books/details/' + loan.Book.id)= loan.Book.title
           td
-            a(href= '/patron/' + loan.Patron.id)= loan.Patron.name
+            a(href= '/patrons/details/' + loan.Patron.id)= loan.Patron.name
           td= loan.loaned_on
           td= loan.return_by
           td= loan.returned_on
           td
-            a.button(href= '/loan/' + loan.id)= 'Return book'
+            a.button(href= '/loans/details/' + loan.id)= 'Return book'
         
