--- a/src/views/book_details.pug
+++ b/src/views/book_details.pug
@@ -3,21 +3,28 @@ extends layout
 block content
   h1= 'Book: ' + book.title
 
-  form
+  if errors
+    ul
+      each error in errors
+        li
+          em= error.message
+
+  form(method= 'post' action= '/books/details/' + book.id)
     p
       label(for= 'title')= 'Title'
-      input(id= 'title' type= 'text' value= book.title)
+      input(id= 'title' name= 'title' type= 'text' value= book.title)
     p
       label(for= 'author')= 'Author'
-      input(id= 'author' type= 'text' value= book.author)
+      input(id= 'author' name= 'author' type= 'text' value= book.author)
     p
       label(for= 'genre')= 'Genre'
-      input(id= 'genre' type= 'text' value= book.genre)
+      input(id= 'genre' name= 'genre' type= 'text' value= book.genre)
     p
       label(for= 'first_published')= 'First Published'
-      input(id= 'first_published' type= 'text' value= book.first_published)
+      input(id= 'first_published' name= 'first_published' type= 'text' value= book.first_published)
     p
       input(type= 'submit' value= 'Update')
+      input(type= 'hidden' value= book.id name= 'id')
 
   h2= 'Loan History'
   table
