--- a/src/views/patron_details.pug
+++ b/src/views/patron_details.pug
@@ -3,27 +3,34 @@ extends layout
 block content
   h1= 'Patron: ' + patron.name
 
-  form
+  if errors
+    ul
+      each error in errors
+        li
+          em= error.message
+
+  form(method= 'post' action= '/patrons/details/' + patron.id)
     p
       label(for= 'first_name')= 'First Name'
-      input(id= 'first_name' type= 'text' value= patron.first_name)
+      input(id= 'first_name' name= 'first_name' type= 'text' value= patron.first_name)
     p
       label(for= 'last_name')= 'Last Name'
-      input(id= 'last_name' type= 'text' value= patron.last_name)
+      input(id= 'last_name' name= 'last_name' type= 'text' value= patron.last_name)
     p
       label(for= 'address')= 'Address'
-      input(id= 'address' type= 'text' value= patron.address)
+      input(id= 'address' name= 'address' type= 'text' value= patron.address)
     p
       label(for= 'email')= 'Email'
-      input(id= 'email' type= 'text' value= patron.email)
+      input(id= 'email' name= 'email' type= 'text' value= patron.email)
     p
       label(for= 'library_id')= 'Library ID'
-      input(id= 'library_id' type= 'text' value= patron.library_id)
+      input(id= 'library_id' name= 'library_id' type= 'text' value= patron.library_id)
     p
       label(for= 'zip_code')= 'Zip Code'
-      input(id= 'zip_code' type= 'text' value= patron.zip_code)
+      input(id= 'zip_code' name= 'zip_code' type= 'text' value= patron.zip_code)
     p
       input(type= 'submit' value= 'Update')
+      input(type= 'hidden' value= patron.id name= 'id')
 
   h2= 'Loan History'
   table
