--- a/src/views/patron_details.pug
+++ b/src/views/patron_details.pug
@@ -53,4 +53,5 @@ block content
           td= loan.return_by
           td= loan.returned_on
           td
-            a(href= '' class= 'button')= 'Return Book'
+            unless loan.returned_on
+              a(href= '' class= 'button')= 'Return Book'
