--- a/src/views/book_details.pug
+++ b/src/views/book_details.pug
@@ -48,4 +48,4 @@ block content
           td= loan.returned_on
           td
             unless loan.returned_on
-              a(href= '' class= 'button')= 'Return Book'
+              a(href= '/loans/return/' + loan.id class= 'button')= 'Return Book'
