--- a/src/views/patron_details.pug
+++ b/src/views/patron_details.pug
@@ -54,4 +54,4 @@ block content
           td= loan.returned_on
           td
             unless loan.returned_on
-              a(href= '' class= 'button')= 'Return Book'
+              a(href= '/loans/return/' + loan.id class= 'button')= 'Return Book'
