--- a/src/views/loan_return.pug
+++ b/src/views/loan_return.pug
@@ -2,6 +2,13 @@ extends layout
 
 block content
   h1= pageTitle
+
+  if errors
+    ul
+      each error in errors
+        li
+          em= error.message
+
   p
     strong= 'Book Title: '
     |
@@ -18,9 +25,10 @@ block content
     strong= 'Return By: '
     |
     = loan.return_by
-  form
+  form(method= 'post' action= '/loans/return/' + loan.id)
     p
       label(for= 'returned_on')= 'Returned on: '
-      input(id= 'returned_on' type= 'text' value= '')
+      input(id= 'returned_on' name= 'returned_on' type= 'text' value= loan.returned_on)
     p
       input(type= 'submit' value= 'Return Book')
+      input(type= 'hidden' value= loan.id name= 'id')
