--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -24,6 +24,7 @@ a.button, input[type=submit] {
   background: #019875;
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
   padding: 10px 14px 12px;
+  margin-right: 10px;
   font-size: 14px;
   border-radius: 2px;
   cursor: pointer;
@@ -92,12 +93,20 @@ label {
   display: inline-block;
 }
 input {
-  padding: 10px;
+  border: 1px solid #aaa;
+  padding: 10px 14px 12px;
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
   font-size: 14px;
   border-radius: 2px;
-  border-color: #E7E7E7;
 }
 input[type=text], select {
   margin-left: 10px;
+}
+
+p.search a {
+  margin-left: 15px;
+}
+p.search input {
+  width: 250px;
+  margin-left: 0;
 }
