--- a/src/views/patrons.pug
+++ b/src/views/patrons.pug
@@ -3,7 +3,11 @@ extends layout
 block content
   h1= pageTitle
   p
-    a.button(href='/patrons/new')= 'Create New Patron'
+    form(method= 'GET' action= baseURL)
+      p.search
+        input(id= 'search' name= 'search' type= 'text' value= pageSearch placeholder= 'Search by title or author')
+
+        a.button(href='/patrons/new')= 'Create New Patron'
 
   table
     thead
@@ -24,3 +28,4 @@ block content
           td= patron.library_id
           td= patron.zip_code
 
+  include partials/pagination
