--- a/src/views/patrons.pug
+++ b/src/views/patrons.pug
@@ -19,13 +19,17 @@ block content
         th= 'Zip'
 
     tbody
-      each patron in patrons
+      if patrons.length > 0
+        each patron in patrons
+          tr
+            td
+              a(href='/patrons/details/' + patron.id)= patron.name
+            td= patron.address
+            td= patron.email
+            td= patron.library_id
+            td= patron.zip_code
+      else
         tr
-          td
-            a(href='/patrons/details/' + patron.id)= patron.name
-          td= patron.address
-          td= patron.email
-          td= patron.library_id
-          td= patron.zip_code
+          td No records found.
 
   include partials/pagination
