Fixed search placeholder text

--- a/src/views/patrons.pug
+++ b/src/views/patrons.pug
@@ -5,7 +5,7 @@ block content
   p
     form(method= 'GET' action= baseURL)
       p.search
-        input(id= 'search' name= 'search' type= 'text' value= pageSearch placeholder= 'Search by title or author')
+        input(id= 'search' name= 'search' type= 'text' value= pageSearch placeholder= 'Search by name or library IDnp')
 
         a.button(href='/patrons/new')= 'Create New Patron'
 
