Updated PUG template lables to plain text

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1= 'Library Manager'
+  h1 Library Manager
   p Welcome to Library Manager
 
   include partials/side-nav
