--- a/src/views/book_details.pug
+++ b/src/views/book_details.pug
@@ -11,31 +11,31 @@ block content
 
   form(method= 'post' action= '/books/details/' + book.id)
     p
-      label(for= 'title')= 'Title'
+      label(for= 'title') Title
       input(id= 'title' name= 'title' type= 'text' value= book.title)
     p
-      label(for= 'author')= 'Author'
+      label(for= 'author') Author
       input(id= 'author' name= 'author' type= 'text' value= book.author)
     p
-      label(for= 'genre')= 'Genre'
+      label(for= 'genre') Genre
       input(id= 'genre' name= 'genre' type= 'text' value= book.genre)
     p
-      label(for= 'first_published')= 'First Published'
+      label(for= 'first_published') First Published
       input(id= 'first_published' name= 'first_published' type= 'text' value= book.first_published)
     p
       input(type= 'submit' value= 'Update')
       input(type= 'hidden' value= book.id name= 'id')
 
-  h2= 'Loan History'
+  h2 Loan History
   table
     thead
       tr
-        th= 'Book'
-        th= 'Patron'
-        th= 'Loaned on'
-        th= 'Return by'
-        th= 'Returned on'
-        th= 'Action'
+        th Book
+        th Patron
+        th Loaned on
+        th Return by
+        th Returned on
+        th Action
     tbody
       each loan in loans
         tr
@@ -48,4 +48,4 @@ block content
           td= loan.returned_on
           td
             unless loan.returned_on
-              a(href= '/loans/return/' + loan.id class= 'button')= 'Return Book'
+              a(href= '/loans/return/' + loan.id class= 'button') Return Book
