--- a/src/views/book_new.pug
+++ b/src/views/book_new.pug
@@ -11,16 +11,16 @@ block content
 
   form(method='POST' action= '/books/new')
     p
-      label(for= 'title')= 'Title'
+      label(for= 'title') Title
       input(id= 'title' name= 'title' type= 'text' value= book.title)
     p
-      label(for= 'author')= 'Author'
+      label(for= 'author') Author
       input(id= 'author' name= 'author' type= 'text' value= book.author)
     p
-      label(for= 'genre')= 'Genre'
+      label(for= 'genre') Genre
       input(id= 'genre' name= 'genre' type= 'text' value= book.genre)
     p
-      label(for= 'first_published')= 'First Published'
+      label(for= 'first_published') First Published
       input(id= 'first_published' name= 'first_published' type= 'text' value= book.first_published)
     p
       input(type= 'submit' value= 'Create New Book')
