--- a/src/views/error.pug
+++ b/src/views/error.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1= 'Oops ... something went wrong'
+  h1 Oops ... something went wrong
   p
     strong
-      em= 'Try one of these instead?'
+      em Try one of these instead?
   include partials/side-nav
