--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= 'Library Manager'
+    title Library Manager
     link(rel='stylesheet', href='/stylesheets/style.css')
   
   body
