--- a/src/views/books.pug
+++ b/src/views/books.pug
@@ -19,7 +19,7 @@ block content
   table
     thead
       tr
-        th Title
+        th Book title
         th Author
         th Genre
         th Year Released
