--- a/src/views/loans.pug
+++ b/src/views/loans.pug
@@ -15,7 +15,7 @@ block content
   table
     thead
       tr
-        th Book
+        th Book title
         th Patron
         th Loaned on
         th Return by
